--- a/mgr_linux/mgr_client/.vscode/settings.json
+++ b/mgr_linux/mgr_client/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
