--- a/mgr_linux/mgr_client/.vscode/settings.json
+++ b/mgr_linux/mgr_client/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylamaEnabled": false
 }
