--- a/mgr_linux/mgr_client/.vscode/settings.json
+++ b/mgr_linux/mgr_client/.vscode/settings.json
@@ -3,5 +3,6 @@
     "python.linting.enabled": true,
     "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
     "python.linting.flake8Enabled": true,
-    "python.linting.pylamaEnabled": false
+    "python.linting.pylamaEnabled": false,
+    "python.dataScience.jupyterServerURI": "local"
 }
