--- a/mgr_linux/mgr_server/mgr_server/Properties/launchSettings.json
+++ b/mgr_linux/mgr_server/mgr_server/Properties/launchSettings.json
@@ -1,16 +1,20 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/mgr_server",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:52903",
       "sslPort": 44320
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "launchBrowser": true,
       "launchUrl": "OperationA",
       "environmentVariables": {
@@ -21,10 +25,13 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "OperationA",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "tst_iis": {
+      "commandName": "IIS"
     }
   }
 }
