--- a/mgr_linux/mgr_client/.vscode/settings.json
+++ b/mgr_linux/mgr_client/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "python.linting.pylintEnabled": false,
+    "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.linting.pylamaEnabled": false,
     "python.dataScience.jupyterServerURI": "local"
 }
