--- a/mgr_linux/mgr_client/.vscode/settings.json
+++ b/mgr_linux/mgr_client/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\ks\\.conda\\envs\\mgr\\python.exe",
     "python.linting.flake8Enabled": false,
     "python.linting.pylamaEnabled": false,
     "python.dataScience.jupyterServerURI": "local"
