--- a/data/auto/2j64m0.toml
+++ b/data/auto/2j64m0.toml
@@ -2,8 +2,8 @@ title = "2j64m0"
 info = "2 jobs 64 machines example 0"
 
 [files]
-data = "../data/auto/2j64m0.csv"
-processing_times = "../data/auto/2j64m0.csv"
+data = "2j64m0.csv"
+processing_times = "2j64m0.csv"
 
 [problem_data]
 index_cols = []
