--- a/data/auto/64j8m0.toml
+++ b/data/auto/64j8m0.toml
@@ -2,8 +2,8 @@ title = "64j8m0"
 info = "64 jobs 8 machines example 0"
 
 [files]
-data = "../data/auto/64j8m0.csv"
-processing_times = "../data/auto/64j8m0.csv"
+data = "64j8m0.csv"
+processing_times = "64j8m0.csv"
 
 [problem_data]
 index_cols = []
