--- a/data/auto/8j16m0.toml
+++ b/data/auto/8j16m0.toml
@@ -2,8 +2,8 @@ title = "8j16m0"
 info = "8 jobs 16 machines example 0"
 
 [files]
-data = "../data/auto/8j16m0.csv"
-processing_times = "../data/auto/8j16m0.csv"
+data = "8j16m0.csv"
+processing_times = "8j16m0.csv"
 
 [problem_data]
 index_cols = []
